Cache Gemini Summary